# vivisection

./: Cargo.toml  README.md
.github/workflows/: check.yml
examples/: erased_struct.rs  fib.rs  fold_nums.rs
src/: fnv1a.rs  lib.rs
