[package]
name = "vivisection"
description = "Let's Experiment with Rust Internals!"
version = "0.1.0"
authors = ["stevej@gmail.com"]
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/stevej/vivisection"
publish = false

[dependencies]

[[bin]]
name = "fnv1a"
path = "bin/fnv1a.rs"

[profile.release]
debug = true
